# solsdr

./: .gitignore  ARTEMISSDR.md  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  solsdr_receiver.py
clients/: README.md  iq_client.py  panadapter.py
clients/examples/: README.md
clients/gnuradio/: ideas.md  interesting-bands.md  qt_iq_waterfall.py
reference/cal/: tap_anchors.json  tap_cal.json  tx_power_cal.json
solsdr/: __init__.py  __main__.py  cli.py  config.py  log.py  mock_radio.py  radio.py  server.py  tx.py  tx_session.py  wake.py
solsdr/api/: __init__.py  control_api.py  hamlib_compat.py  iq_server.py  iq_tx_server.py
solsdr/audio/: __main__.py  audio_bridge.py  js8_bridge.py  pulse_devices.py  rigctld_poller.py  source_profiles.py
solsdr/dsp/: __init__.py  cw_decode.py  demod.py  filters.py  modulator.py  rx_chain.py  tap_cal.py  tx_power.py
solsdr/protocol/: __init__.py  control.py  opcodes.py  packet.py  poweron_pro.py  profiles.py  rx_stream.py  tx_pacer.py
systemd/: README.md  solsdr-bridge.service  solsdr-receiver.service
tests/: test_apis.py  test_codec.py  test_cw.py  test_filters.py  test_frontpanel_tx.py  test_hamlib_live.py  test_iq_decode.py  test_iq_server.py  test_iq_tx_server.py  test_js8_bridge.py  test_mock.py  test_modulator.py  test_tx_pacer.py  test_tx_session.py
tools/: cal_tap.py  capture_iq.py  capture_iq_stream.py  ft8_record.py  ft8_selftest.py  offline_decode.py  rx2_coherence.py  spectrum.py  trim_iq.py  tx_anchor.py  tx_bandcal.py  tx_calibrate.py  tx_firstkey.py
