[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "solsdr"
version = "0.2.0"
description = "Direct network control and IQ streaming for the SunSDR2 PRO (no ExpertSDR3)"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-2.0-only"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Ham Radio",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "sounddevice>=0.4.6",
]

[project.optional-dependencies]
tools = ["matplotlib>=3.7"]

[project.scripts]
solsdr-receiver = "solsdr_receiver:main"

[tool.setuptools]
packages = ["solsdr", "solsdr.protocol", "solsdr.dsp", "solsdr.api"]
py-modules = ["solsdr_receiver"]
